Fix not displayable parent component for Dialog